...
        Button(
            onClick = {
                login()
            },
            modifier = Modifier
                .width(200.dp)
                .testTag("login_button")
        ) {
            Text(
                text = stringResource(id = R.string.login),
                style = MaterialTheme.typography.titleLarge
            )
        }
...
